# epidauros

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
dataset/: clean_raw.py  create_raw.py  enhance_dataset.py
dataset/scripts/: enhance_dataset.py  enhance_raw.py  extract_raw.py  filter_dataset.py  patch_demographics.py
db/: init_qdrant.py  schema.sql  shcema.sql
docs/: ai_agent_architecture.md  scoring_logic.md
src/: __init__.py
src/app/: casting_board.py  graph_extraction.py  health_check.py
src/core/: __init__.py  casting_agent.py  database.py  graph_generator.py
src/core/prompts/: extract_scenario_graph.py
src/etl/: 01_preprocess_llm.py  02_load_postgres.py  03_postprocess_scoring.py  04_embed_to_qdrant.py
src/models/: __init__.py  character_archetypes.py  db_orm.py  etl_schemas.py  scenario_structure.py  situation_archetypes.py
